--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -10,6 +10,9 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
@@ -45,7 +48,6 @@ jobs:
       id: streak
       run: |
         STREAK=0
-        CURRENT_DATE=$(date +%Y-%m-%d)
         
         COMMITS=$(git log --since="365 days ago" --pretty=format:"%ai %s" | grep -i "day [0-9]" | head -30)
         
@@ -58,48 +60,15 @@ jobs:
         
         echo "streak=$STREAK" >> $GITHUB_OUTPUT
 
-    - name: Calculate Tech Stack Progress
-      id: tech-progress
-      run: |
-        RAILS_PROGRESS=0
-        SVELTE_PROGRESS=0
-        SCSS_PROGRESS=0
-        
-        if [ -d "new-tech-stack/ruby-on-rails" ]; then
-          RAILS_FILES=$(find new-tech-stack/ruby-on-rails -type f | wc -l)
-          RAILS_PROGRESS=$((RAILS_FILES * 5))
-          if [ $RAILS_PROGRESS -gt 100 ]; then RAILS_PROGRESS=100; fi
-        fi
-        
-        if [ -d "new-tech-stack/svelte" ]; then
-          SVELTE_FILES=$(find new-tech-stack/svelte -type f | wc -l)
-          SVELTE_PROGRESS=$((SVELTE_FILES * 5))
-          if [ $SVELTE_PROGRESS -gt 100 ]; then SVELTE_PROGRESS=100; fi
-        fi
-        
-        if [ -d "new-tech-stack/scss" ]; then
-          SCSS_FILES=$(find new-tech-stack/scss -type f | wc -l)
-          SCSS_PROGRESS=$((SCSS_FILES * 5 + 30))
-          if [ $SCSS_PROGRESS -gt 100 ]; then SCSS_PROGRESS=100; fi
-        fi
-        
-        echo "rails=$RAILS_PROGRESS" >> $GITHUB_OUTPUT
-        echo "svelte=$SVELTE_PROGRESS" >> $GITHUB_OUTPUT
-        echo "scss=$SCSS_PROGRESS" >> $GITHUB_OUTPUT
-
     - name: Update README
       run: |
         CURRENT_DATE=$(date '+%B %d, %Y')
         
-        sed -i "s/\*\*Current Streak\*\*: [0-9]* days/**Current Streak**: ${{ steps.streak.outputs.streak }} days/" README.md
-        sed -i "s/\*\*Problems Solved\*\*: [0-9]* total/**Problems Solved**: ${{ steps.leetcode-stats.outputs.total }} total/" README.md
+        sed -i "s/\*\*Current Streak\*\*: [0-9]* days/\*\*Current Streak\*\*: ${{ steps.streak.outputs.streak }} days/" README.md
+        sed -i "s/\*\*Problems Solved\*\*: [0-9]* total/\*\*Problems Solved\*\*: ${{ steps.leetcode-stats.outputs.total }} total/" README.md
         sed -i "s/Easy: [0-9]*/Easy: ${{ steps.leetcode-stats.outputs.easy }}/" README.md
         sed -i "s/Medium: [0-9]*/Medium: ${{ steps.leetcode-stats.outputs.medium }}/" README.md
         sed -i "s/Hard: [0-9]*/Hard: ${{ steps.leetcode-stats.outputs.hard }}/" README.md
-        
-        sed -i "s/| \*\*Ruby on Rails\*\* | [0-9]*% |/| **Ruby on Rails** | ${{ steps.tech-progress.outputs.rails }}% |/" README.md
-        sed -i "s/| \*\*Svelte\*\* | [0-9]*% |/| **Svelte** | ${{ steps.tech-progress.outputs.svelte }}% |/" README.md
-        sed -i "s/| \*\*SCSS\*\* | [0-9]*% |/| **SCSS** | ${{ steps.tech-progress.outputs.scss }}% |/" README.md
         
         sed -i "s/\*Last updated: .*/\*Last updated: $CURRENT_DATE\*/" README.md
 
